[workspace]
resolver = "2"
members = [
  "crates/luck-core",
  "crates/luck-cli",
  "crates/luck-ffi",
  "crates/luck-wasm",
]

[workspace.package]
version = "5.0.0"
edition = "2021"
license = "MIT"
authors = ["Luck Editor contributors"]
rust-version = "1.78"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
