[package]
name = "luck-core"
description = "Strict cookie parsing, validation, policy, query, and serialization core for Luck Editor."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
