[package]
name = "luck-ffi"
description = "C ABI for the Luck Editor Rust parser and validator."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
luck-core = { path = "../luck-core" }
serde_json.workspace = true
