[package]
name = "luck-wasm"
description = "WebAssembly bindings for Luck Editor's Rust parser and validator."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luck-core = { path = "../luck-core" }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
